# CPP_OOP

./: .gitignore  Article.cpp  Article.h  CMakeLists.txt  Date.h  main.cpp
controllers/: File.cpp  File.h  ReadFile.cpp  ReadFile.h  WriteFile.cpp  WriteFile.h
exceptions/: Exception.h
implementation/: Article.cpp  Author.cpp  Date.cpp  Journal.cpp  Person.cpp  Post.cpp
interfaces/: Article.h  Author.h  Date.h  Journal.cpp  Journal.h  Person.h  Post.h
libraries/: Article.cpp  Author.cpp  Date.cpp  Journal.cpp  Journal.h  Person.cpp  Post.cpp
